# gst-restart-plugin

./: CMakeLists.txt  README.md  gstrestartsrc.c  gstrestartsrc.h
